--- a/app.json
+++ b/app.json
@@ -33,5 +33,5 @@
               "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
           }
       ],
-      "stack": "container"
-
+      "stack": "container": {
+      }
