--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
-"name": "bot",
-    "description": "bot",
+{
+    "name": "Telegram-Bot",
+    "description": "A Telegram Bot, written in Python with Pyrogram.",
     "keywords": [
     "python3",
-    "telegram",
-    "bot"
+    "telegram"
     ],
     "env": {
       "API_ID": {
@@ -17,21 +17,18 @@
         "required": true
       },
       "BOT_TOKEN": {
-        "description": "A Bot's token Get it from @Botfather",
+        "description": "A Bot's token from Botfather",
         "value": "",
         "required": true
       }
-      },
+    },
     "buildpacks": [
           {
               "url": "heroku/python"
-          },
-          {
-              "url": "heroku/nodejs"
-          },
+          }, 
           {
               "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
           }
       ],
-      "stack": "container": {
-      }
+      "stack": "container"
+}
